Prevent filter-values from wrapping

--- a/fava/static/sass/_filter.scss
+++ b/fava/static/sass/_filter.scss
@@ -90,6 +90,7 @@
                 position: relative;
                 min-width: 8rem;
                 padding: 0 10px;
+                white-space: nowrap;
 
                 &:hover {
                     color: $color_background;
